[build-system]
requires = ["setuptools>=61", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ease_grid"
description = "EASE grid generation"
readme = "README.rst"
license = {text = "MIT"}
authors = [
    {name = "TU Wien", email = "remote.sensing@geo.tuwien.ac.at"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pyproj",
]
dynamic = ["version"]

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Documentation = "https://ease-grid.readthedocs.io/en/latest/?badge=latest"
Homepage = "https://ease-grid.readthedocs.io/en/latest/?badge=latest"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
write_to = "src/ease_grid/_version.py"

[tool.pytest.ini_options]
addopts = [
    "--cov=ease_grid",
    "--cov-report=term-missing",
    "--verbose",
]
testpaths = ["tests"]
norecursedirs = [
    "dist",
    "build",
    ".tox",
]

[tool.coverage.run]
source = ["ease_grid"]
branch = true

[tool.coverage.paths]
source = [
    "src/",
    "*/site-packages/",
]

[tool.flake8]
exclude = [
    ".tox",
    "build",
    "dist",
    ".eggs",
    "docs/conf.py",
]

[tool.bdist_wheel]
universal = true
